--- a/TOBD/exam/TOBDexam.ipynb
+++ b/TOBD/exam/TOBDexam.ipynb
@@ -14082,7 +14082,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# реализуем one-hot encoding\n",
     "OneHotArray = np.zeros((BaseArray.size, BaseArray.max() + 1))\n",
     "OneHotArray[np.arange(BaseArray.size), BaseArray] = 1"
@@ -14129,6 +14128,147 @@
    ],
    "source": [
     "print(f\"После: \\n{OneHotArray}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adfc2ac8",
+   "metadata": {},
+   "source": [
+    "#### еще один вариант"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d65e53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original data\n",
+      "   col1\n",
+      "0     2\n",
+      "1     3\n",
+      "2     2\n",
+      "3     2\n",
+      "4     2\n",
+      "5     1\n",
+      "******************************\n",
+      "The transform data using get_dummies\n",
+      "   Planet_1  Planet_2  Planet_3\n",
+      "0         0         1         0\n",
+      "1         0         0         1\n",
+      "2         0         1         0\n",
+      "3         0         1         0\n",
+      "4         0         1         0\n",
+      "5         1         0         0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'col1': [2, 3, 2, 2, 2, 1]})\n",
+    "print('The original data')\n",
+    "print(df)\n",
+    "print('*' * 30)\n",
+    "df_new = pd.get_dummies(df, columns=['col1'], prefix='Planet')\n",
+    "print('The transform data using get_dummies')\n",
+    "print(df_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5f605c",
+   "metadata": {},
+   "source": [
+    "#### еще один вариант"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "758435e2",
+   "metadata": {},
+   "source": [
+    "С использованием sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "da5d0971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original data\n",
+      "[2 3 2 2 2 1]\n",
+      "The transform data using OneHotEncoder\n",
+      "[[0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn.preprocessing as preprocessing\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "targets = np.array([2, 3, 2, 2, 2, 1])\n",
+    "labelEnc = preprocessing.LabelEncoder()\n",
+    "new_target = labelEnc.fit_transform(targets)\n",
+    "onehotEnc = preprocessing.OneHotEncoder()\n",
+    "onehotEnc.fit(new_target.reshape(-1, 1))\n",
+    "targets_trans = onehotEnc.transform(new_target.reshape(-1, 1))\n",
+    "print('The original data')\n",
+    "print(targets)\n",
+    "print('The transform data using OneHotEncoder')\n",
+    "print(targets_trans.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b79fef9",
+   "metadata": {},
+   "source": [
+    "#### еще один вариант"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8e8f2b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([2, 3, 2, 2, 2, 1])\n",
+    "b = np.zeros((a.size, a.max() + 1))\n",
+    "b[np.arange(a.size), a] = 1\n",
+    "\n",
+    "b"
    ]
   },
   {
