--- a/TOBD/exam/TOBDexam.ipynb
+++ b/TOBD/exam/TOBDexam.ipynb
@@ -11967,7 +11967,7 @@
    "source": [
     "## Задание 40\n",
     "\n",
-    "Датасет: sp500hst.txt. Необходимо создать 2 датафрейма, один по тикеру NVDA, второй по тикеру AAPL. Добавить столбец с разницой Закрытия и Открытия. Отбираем строки тикеров, в которых цена закрытия больше цены открытия."
+    "Датасет: sp500hst.txt Создать DataFrame, в котором присутсвует столбец, отражающий разницу в объемах торгов по NVDA и AAPL в одинаковые дни, и который содержит исходыне данные об объеме торгов этими акциями, и модификацию этого DataFrame, в котором сохранены только строки для дней, когда акции NVDA и AAPL дорожали (цена закрытия выше цены открытия)"
    ]
   },
   {
@@ -12516,7 +12516,7 @@
    "source": [
     "## Задание 41\n",
     "\n",
-    "Написать функцию, которая с помощью регулярных выражений ищет слова, состоящие из букв латинского алфавита в нижнем регистре, разделеннные символом \"_\", а после него идет один или более \"@\". Привести примеры и контрпримеры."
+    "С помощью кода на Python с использованием регулярных выражений решить задачу. Реализовать функцию, которая ищет в тексте все слова, представляющие из себя последовательности латинских букв в нижнем регистре, разделенных одним символом подчеркивания (\"_\") и имеющие после подчеркивания один или более символ \"@\". Продемонстрировать корректную работу функции на примерах и контрпримерах."
    ]
   },
   {
@@ -14132,7 +14132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfc2ac8",
+   "id": "78b0acdb",
    "metadata": {},
    "source": [
     "#### еще один вариант"
@@ -14141,7 +14141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d65e53d",
+   "id": "ac89baab",
    "metadata": {},
    "outputs": [
     {
@@ -14181,7 +14181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da5f605c",
+   "id": "2865c18f",
    "metadata": {},
    "source": [
     "#### еще один вариант"
@@ -14189,7 +14189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "758435e2",
+   "id": "499fc638",
    "metadata": {},
    "source": [
     "С использованием sklearn"
@@ -14198,7 +14198,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "da5d0971",
+   "id": "2cc18760",
    "metadata": {},
    "outputs": [
     {
@@ -14235,7 +14235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b79fef9",
+   "id": "6eb59243",
    "metadata": {},
    "source": [
     "#### еще один вариант"
@@ -14244,7 +14244,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8e8f2b9c",
+   "id": "7552f6c7",
    "metadata": {},
    "outputs": [
     {
